[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/UI/Left_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/UI_themes/Default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/Right_button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Left_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Left_button_hover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Right_button_hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Right_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Scripts/UI_logic/Customization_logic.gd" type="Script" id=8]

[node name="Customization" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 352, 224 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -53.0
margin_right = 124.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "Skins"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 248.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 90.0
margin_right = 158.0
margin_bottom = 32.0

[node name="Skin_right" type="TextureButton" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 5 )

[node name="Skin_left" type="TextureButton" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Control4" type="Control" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 248.0
margin_bottom = 55.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control5" type="Control" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 248.0
margin_bottom = 59.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control6" type="Control" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 248.0
margin_bottom = 63.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 248.0
margin_bottom = 82.0
theme = ExtResource( 2 )
text = "Themes"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 248.0
margin_bottom = 118.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 90.0
margin_right = 158.0
margin_bottom = 32.0

[node name="Theme_right" type="TextureButton" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Theme_left" type="TextureButton" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 248.0
margin_bottom = 122.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 248.0
margin_bottom = 126.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 248.0
margin_bottom = 130.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 248.0
margin_bottom = 155.0
theme = ExtResource( 2 )
text = "Back"

[node name="Appear" type="Tween" parent="."]

[node name="Disappear" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/CenterContainer2/HBoxContainer/Skin_right" to="." method="_on_Skin_right_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/HBoxContainer/Skin_left" to="." method="_on_Skin_left_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Theme_right" to="." method="_on_Theme_right_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Theme_left" to="." method="_on_Theme_left_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="tween_all_completed" from="Disappear" to="." method="_on_Disappear_tween_all_completed"]
